--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gareleon.github.io/React.js-Projects",
+  "homepage": "https://gareleon.github.io/fCC-random-quote-app",
   "name": "random-quote-generator",
   "version": "0.1.0",
   "private": true,
